--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
